spl/tests/compile_fail/multi_token_program_missing_mint_selector.stderr
error: unknown key-value directive `mint::decimals = ...`
  --> tests/compile_fail/multi_token_program_missing_mint_selector.rs:16:9
   |
16 |         mint::decimals = 6,
   |         ^^^^^^^^^^^^^^

warning: unused imports: `Token2022` and `Token`
 --> tests/compile_fail/multi_token_program_missing_mint_selector.rs:3:24
  |
3 | use quasar_spl::{Mint, Token, Token2022, TokenProgram, Token2022Program};
  |                        ^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
